2016-11-26  Dirk Eddelbuettel  <edd@debian.org>

	* tests/utilities.R: Gaming coverage metrics by adding more calls

2016-11-25  Dirk Eddelbuettel  <edd@debian.org>

	* .travis.yml (after_success): Launch coverage analysis
	* .codecov.yml (comment): Added
	* .Rbuildignore: Exclude .codecov.yml
	* README.md: Added code coverage badge

2016-11-19  Dirk Eddelbuettel  <edd@debian.org>

	* R/anytime.R (anydate,utcdate): Check for input of class Date

	* src/anytime.cpp (stringSplitter): Be more defensive about input string

2016-11-07  Dirk Eddelbuettel  <edd@debian.org>

	* DESCRIPTION (Version, Date): Release 0.1.0

	* tests/validate.R: No call of stopifnot(); Windows always surprises

2016-11-06  Dirk Eddelbuettel  <edd@debian.org>

	* src/anytime.cpp (sformats[]): Remove one redundant entry present
	twice, move one entry to related entries
	(convertToTime): Another special case treatment for hhmmss

	* tests/allFormats.R: Align with current formats

2016-11-05  Bob Jansen <bobjansen@gmail.com>

	* src/anytime.cpp (sformats[]): Add one 'no-separator' format

2016-11-05  Dirk Eddelbuettel  <edd@debian.org>

	* src/anytime.cpp (sformats[]): Add fractional seconds to four more
	datetimes, also add one missing format;
	(isAtLeastGivenLengthAndAllDigits): Another refinement, and generalized;
	(setDebug): add simple debug routine

2016-11-04  Dirk Eddelbuettel  <edd@debian.org>

	* src/anytime.cpp (convertToTime): Add logic to cope with the extended
	'yyyymmdd hhmm[ss[.fff]]' format which needs treatment before parsing
	* tests/allFormats.R: Added tests

2016-10-30  Dirk Eddelbuettel  <edd@debian.org>

	* R/anytime.R (testOutput): New simple (unexported) string output function
	* src/anytime.cpp (testOutput_impl): Implementation

2016-10-24  Dirk Eddelbuettel  <edd@debian.org>

	* DESCRIPTION (Version): Rolled version and date

	* R/anytime.R (testFormat): New layer around testFormat_impl testing for RStudio
	* src/anytime.cpp (testFormat_impl): Renamed from testFormat