@@ -63,4 +63,5 @@ anytime(c("20160911", "20160911 1011", "20160911 101112", "20160911 101112.34567
 anytime("NA") 				# String NA
 anytime(Sys.time())                     # POSIXt pass-through
 anytime(Sys.Date())			# Date pass-through
-utcdate(Sys.Date())
+utcdate(Sys.Date())                     # Date pass-through
+anytime(TRUE)                           # tickles unsupported type
